test fix for login background image flicker in firefox and edge

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -7,6 +7,19 @@ div.login-background-image {
   left: 0;
   height: 100%;
   width: 100%;
+  z-index: 0;
+}
+
+div.login-background-image2 {
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  filter: blur(20px);
 }
 
 div.login-background-image.small {
@@ -14,6 +27,14 @@ div.login-background-image.small {
 }
 
 div.login-background-image.large {
+  animation: sharpen 0.5s both;
+}
+
+div.login-background-image2.small {
+  filter: blur(20px);
+}
+
+div.login-background-image2.large {
   animation: sharpen 0.5s both;
 }
 
@@ -111,6 +132,19 @@ i.login-form-icon {
 div.login-remember-me-cont {
   margin: 0 75px;
 }
+
+/* div.custom-control.custom-checkbox {
+  padding-left: 0;
+} */
+
+/* input.custom-control-input#remember-me {
+  position: static;
+  z-index: 0;
+}
+
+label.remember-me-label {
+  margin-left: 10px;
+} */
 
 div.form-group-login.form-group-login-button {
   margin-top: 35px;
